Split product into woo and logicom